--- a/_posts/2023-11-11-RockS.T.A.R.-AI-Interviewer.md
+++ b/_posts/2023-11-11-RockS.T.A.R.-AI-Interviewer.md
@@ -2,7 +2,7 @@
 layout: post
 title: RockS.T.A.R. AI Interviewer
 date: 2023-11-11
-categories: [OpenAI, Python, Flask, Assistants, htmx, Tailwind CSS, LangUI]
+categories: [OpenAI, Python, Flask, htmx, Tailwind, LangUI]
 ---
 A couple of weeks ago, a company that I was interviewing for make it clear that they wanted my responses to be in the S.T.A.R. (Situation, Task, Action, Result) format. I had this idea that I could use ChatGPT to practice this, so after asking if it was familiar with S.T.A.R.,  I uploaded my resume and copied in the job description and then prompted with:
 
@@ -13,7 +13,7 @@ I am a software engineer and I'm  going to interview for a company that uses thi
 ChatGPT answered with a breakdown of 5 different situations that I could think about, so then I said:
 
 ```
-Okay, so you play the role of the interviewer and ask me questions, and I will give an answer using S.T.AR., then you help me improve my answers.
+Okay, so you play the role of the interviewer and ask me questions, and I will give an answer using S.T.A.R., then you help me improve my answers.
 ```
 
 This was solid gold. After this, we carried out a great conversation, where it asked me questions that were relevant to my resume and the job description. I answered and ChaGPT gave me great feedback and sometimes rewrote my answers in a my nicer way than I didn't. Such great practice, which gave me an idea. I've been trying to learn how to use the OpenAI API's and this seemed like a great tool to write up. 
