Lower case categories
Fix frontmatter on some posts

--- a/_posts/2024-03-14-etcetera.md
+++ b/_posts/2024-03-14-etcetera.md
@@ -1,3 +1,8 @@
-# Etcetera
+—
+layout: post
+title: “etcetera”
+date: 2024-03-14
+categories: [booknotes]
+—
 
 I'm reading the Temeraire series and noticed in letters that people sign off with “yours, etc.” or sometimes simply “etc.”  Love it, going to start using the same. 
